Updated title and description

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="assets/logo.png" type="image/x-icon">
-    <title>PREMIER-MEDIA - The film production and distribution company. Produces feature movies, documentaries and short films.</title>
-    <meta name="description" content="The film production and distribution company. Produces feature movies, documentaries and short films.">
+    <title>PREMIER-MEDIA - кінокомпанія з виробницта та дистрибуції фільмів. Продюсує художні, документальні та короткометражні кінофільми. The film production and distribution company. Produces feature movies, documentaries and short films.</title>
+    <meta name="description" content="PREMIER-MEDIA - кінокомпанія з виробницта та дистрибуції фільмів. Продюсує художні, документальні та короткометражні кінофільми. The film production and distribution company. Produces feature movies, documentaries and short films.">
     <meta name="keywords" content="прем'єр-медіа, українське кіно, продюсер, фільм, продакшн, film, movie, premier-media, produce, distribution, ukrainian production, indie, arthouse">
 
     <!-- OpenGraph tags -->
