--- a/index.html
+++ b/index.html
@@ -154,6 +154,33 @@
             <p>2019, short, drama, Ukraine</p>
           </div>
         </div>
+
+
+        <div class="film-card">
+          <div class="poster-wrapper">
+            <a href="movies/vira.html"><img src='assets/projects/vira.png'></a>
+          </div>
+          <div class="description">
+            <h2>VIRA / ВIPA</h2>
+            <p>
+              <strong>Director:</strong>
+              Аnna Buryachkova
+            </p>
+            <p>
+              <strong>Producer:</strong>
+              Ruslan Tovkun
+            </p>
+            <p>
+              <strong>Script:</strong>
+              Oksana Savchenko
+            </p>
+            <p>
+              <strong>Production:</strong>
+              Premier Media
+            </p>
+            <p>2020, short, documentary, Ukraine</p>
+          </div>
+        </div>
       </div>
       <!-- Раздел Projects: конец блока-->
 
