--- a/movies/vira.html
+++ b/movies/vira.html
@@ -69,19 +69,9 @@
           <div class="description">
             <h2>VIRA / ВIPA</h2>
     <h3>2020, short, documentary, Ukraine</h3>
-    <p>CЮЖЕТ:</p>
-    <p>ТРИНАДЦЯТИРІЧНА ВІРА, МЕШКАНКА НЕВИЛИЧКОГО МІСТЕЧКА НА СХОДІ УКРАЇНИ, НЕ ЗВАЖАЮЧИ НА ТЕ,
-ЩО БОЙОВІ ДІЇ НАВКОЛО НЕ ПРИПИНЯЛИСЬ, КОЖНОГО ДНЯ ХОДИЛА ДО ШКОЛИ.
-НАВІТЬ ТОДІ, КОЛИ МІСТ НА ІНШИЙ БІК, ДЕ БУЛА РОЗТАШОВАНО ШКОЛА БУЛО ЗРУЙНОВАНО.</p>
-    <p>IСТОРИЧНА НОТА:</p>
-    <p>3-ГО ВЕРЕСНЯ 2014 РОКУ ТЕРОРИСТИ ПОВНІСТЮ ЗРУЙНУВАЛИ МІСТ ЧЕРЕЗ РІЧКУ СІВЕРСЬКИЙ ДОНЕЦЬ.
-У СЕЛИЩІ ТРЬОХІЗБЕНКА. ВЕЛИКА ЧАСТИНА МЕШКАНЦІВ ЗАЛИШИЛАСЬ БЕЗ МОЖЛИВОСТІ ДІСТАТИСЯ
-ДО ШКОЛИ ТА ЛІКАРНІ. АЛЕ БУЛИ ДІТИ, ЯКІ</p>
-    <p>СТИЛЬ ФIЛЬМУ:</p>
-    <p>СТВОРИТИ ОСОБЛИВУ ЕКРАННУ ВИРАЗНІСТЬ, ЯКА БИ ЗМОГЛА ЗАНУРИТИ ГЛЯДАЧА У ПРОСТІР І ЧАС, В ЯКОМУ ІСНУВАЛА НАША
-ГЕРОЇНЯ — ПЕРЕДАТИ ЇЇ СТАН І СВІТОСПРИЙНЯТТЯ.
-ОДНА З НАЙВАЖЛИВІШИХ ЧАСТИН ФІЛЬМУ - ІНТЕРВ’Ю З ГЕРОЇНЕЮ, ЯКА ВЖЕ ПОДОРОСЛІШАЛА,
-ЩО ВОНА ВІДЧУВАЛА? ЩО ВІДЧУВАЄ ЗАРАЗ? ЯК СТАВИТЬСЯ ДО СВОЇХ ДІЙ 5ТИ РІЧНОЇ ДАВНИНИ?</p>
+    <p>Tема: <br> Підліткове дорослішання на тлі війни.</p>
+    <p>Cюжет: <br>Тринадцятирічна віра, мешканка невиличкого містечка на сході україни, не зважаючи на те, що бойові дії навколо не припинялись, кожного дня ходила до школи. Навіть тоді, коли міст на інший бік, де була розташовано школа було зруйновано.</p>
+    <p>Iсторична нота: <br> 3-го вересня 2014 року терористи повністю зруйнували міст через річку сіверський донець. У селищі трьохізбенка. Велика частина мешканців залишилась без можливості дістатися до школи та лікарні. Але були діти, які продовжували ходити до школи, перепливаючи річку на човнах. Серед них була і наша героїня.</p>
 
           </div>
 
