--- a/movies/desolation.html
+++ b/movies/desolation.html
@@ -48,7 +48,7 @@
         <div class="poster-side">
           <div class="film-card">
             <div class="poster-wrapper">
-              <img src='../assets/projects/spustoshennya.jpg'>
+              <img src='../assets/produced/spustoshennya.jpg'>
             </div>
           </div>
           <div class="details">
@@ -59,7 +59,8 @@
             <!-- <p><strong>Lead Actors: </strong>Full Name, Full Name, Full Name, Full Name, Full Name, Full Name</p> -->
             <!-- <p><strong>Production Design: </strong>Full Name</p> -->
             <p><strong>Producer: </strong>Ruslan Tovkun / Руслан Товкун</p>
-            <p><strong>Co-Producer: </strong>Jane Yatsuta / Женя Яцута</p>
+            <!-- <p><strong>Co-Producer: </strong>Jane Yatsuta / Женя Яцута</p> -->
+            <p><strong>Production company: </strong>Premier-Media Fillms</p>
             <p><strong>Co-Production: </strong>Radioaktive Film</p>
             <!-- <p><strong>Supported By: </strong>Company Name, Company Name</p> -->
             <!-- <p><strong>World Sales: </strong>100 000 000$</p> -->
@@ -106,7 +107,7 @@
           </div>
 
           <div class="poster-wrapper">
-            <img src='../assets/projects/spustoshennya.jpg'>
+            <img src='../assets/produced/spustoshennya.jpg'>
           </div>
 
           <div class="movie-description">
@@ -132,7 +133,8 @@
             <!-- <p><strong>Lead Actors: </strong>Full Name, Full Name, Full Name, Full Name, Full Name, Full Name</p> -->
             <!-- <p><strong>Production Design: </strong>Full Name</p> -->
             <p><strong>Producer: </strong>Ruslan Tovkun / Руслан Товкун</p>
-            <p><strong>Co-Producer: </strong>Jane Yatsuta / Женя Яцута</p>
+            <!-- <p><strong>Co-Producer: </strong>Jane Yatsuta / Женя Яцута</p> -->
+            <p><strong>Production company: </strong>Premier-Media Fillms</p>
             <p><strong>Co-Production: </strong>Radioaktive Film</p>
             <!-- <p><strong>Supported By: </strong>Company Name, Company Name</p> -->
             <!-- <p><strong>World Sales: </strong>100 000 000$</p> -->
