--- a/movies/vira.html
+++ b/movies/vira.html
@@ -70,8 +70,8 @@
             <h2>VIRA / ВIPA</h2>
             <h3>2020, short, documentary, Ukraine</h3>
             <p>Tема: <br> Підліткове дорослішання на тлі війни.</p>
-            <p>Cюжет: <br>Тринадцятирічна віра, мешканка невиличкого містечка на сході україни, не зважаючи на те, що бойові дії навколо не припинялись, кожного дня ходила до школи. Навіть тоді, коли міст на інший бік, де була розташовано школа було зруйновано.</p>
-            <p>Iсторична нота: <br> 3-го вересня 2014 року терористи повністю зруйнували міст через річку сіверський донець. У селищі трьохізбенка. Велика частина мешканців залишилась без можливості дістатися до школи та лікарні. Але були діти, які продовжували ходити до школи, перепливаючи річку на човнах. Серед них була і наша героїня.</p>
+            <p>Cюжет: <br>Тринадцятирічна Віра, мешканка невиличкого містечка на сході України, не зважаючи на те, що бойові дії навколо не припинялись, кожного дня ходила до школи. Навіть тоді, коли міст на інший бік, де була розташовано школа було зруйновано.</p>
+            <p>Iсторична нота: <br> 3-го вересня 2014 року терористи повністю зруйнували міст через річку Сіверський Донець. У селищі Трьохізбенка. Велика частина мешканців залишилась без можливості дістатися до школи та лікарні. Але були діти, які продовжували ходити до школи, перепливаючи річку на човнах. Серед них була і наша героїня.</p>
 
           </div>
 
@@ -99,8 +99,8 @@
 
           <div class="movie-description">
             <p>Tема: <br> Підліткове дорослішання на тлі війни.</p>
-            <p>Cюжет: <br>Тринадцятирічна віра, мешканка невиличкого містечка на сході україни, не зважаючи на те, що бойові дії навколо не припинялись, кожного дня ходила до школи. Навіть тоді, коли міст на інший бік, де була розташовано школа було зруйновано.</p>
-            <p>Iсторична нота: <br> 3-го вересня 2014 року терористи повністю зруйнували міст через річку сіверський донець. У селищі трьохізбенка. Велика частина мешканців залишилась без можливості дістатися до школи та лікарні. Але були діти, які продовжували ходити до школи, перепливаючи річку на човнах. Серед них була і наша героїня.</p>
+            <p>Cюжет: <br>Тринадцятирічна Віра, мешканка невиличкого містечка на сході України, не зважаючи на те, що бойові дії навколо не припинялись, кожного дня ходила до школи. Навіть тоді, коли міст на інший бік, де була розташовано школа було зруйновано.</p>
+            <p>Iсторична нота: <br> 3-го вересня 2014 року терористи повністю зруйнували міст через річку Сіверський Донець. У селищі Трьохізбенка. Велика частина мешканців залишилась без можливості дістатися до школи та лікарні. Але були діти, які продовжували ходити до школи, перепливаючи річку на човнах. Серед них була і наша героїня.</p>
 
           </div>
 
