--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <img src="assets/logo.png" class="image-logo">
         </a>
         <a href="https://premiermediafilms.com/" id="logo">PREMIER-MEDIA</a>
-<!-- Пункт 2: меню -->
+      <!-- Пункт 2: меню -->
         <ul class="desktop-menu">
           <li><a href="#projects-start">Projects</a></li>
           <li><a href="#produced-start">Produced</a></li>
@@ -74,25 +74,6 @@
       <hr>
       <div id="projects">
         <!-- Раздел Projects: начало блока-->
-
-
-        <div class="film-card">
-          <div class="poster-wrapper">
-          <a href="movies/daddys_room.html">  <img src='assets/projects/kimnata_batika.jpg'></a>
-          </div>
-          <div class="description">
-            <a href="movies/daddys_room.html"> <h2>DADDY’S ROOM / КІМНАТА БАТІКА</h2> </a>
-            <p>
-              <strong>Director:</strong>
-              Maria Khalpakhchi
-            </p>
-            <p>
-              <strong>Script:</strong>
-              Oksana Savchenko
-            </p>
-            <p>2020, short, drama, 17 min., Ukraine</p>
-          </div>
-        </div>
 
         <div class="film-card">
           <div class="poster-wrapper">
@@ -166,6 +147,25 @@
       <hr>
       <!-- Раздел Produced: начало блока-->
       <div id="produced">
+
+        <div class="film-card">
+          <div class="poster-wrapper">
+          <a href="movies/batiks_room.html">  <img src='assets/produced/batiks_room.jpg'></a>
+          </div>
+          <div class="description">
+            <a href="movies/batiks_room.html"> <h2>BATIK'S ROOM / КІМНАТА БАТІКА</h2> </a>
+            <p>
+              <strong>Director:</strong>
+              Maria Khalpakhchi
+            </p>
+            <p>
+              <strong>Script:</strong>
+              Oksana Savchenko
+            </p>
+            <p>2020, short, drama, 25 min., Ukraine</p>
+          </div>
+        </div>
+
         <div class="film-card">
           <div class="poster-wrapper">
             <img src='assets/produced/skazky.jpg'>
@@ -205,7 +205,7 @@
             <p>2008, feature, drama, Ukraine</p>
           </div>
         </div>
-        
+
         <div class="film-card">
           <div class="poster-wrapper">
           <a href="movies/desolation.html"> <img src='assets/produced/spustoshennya.jpg'> </a>
@@ -365,7 +365,7 @@
       <!-- Раздел Footer: начало блока-->
 
       <div id="footer">
-        PREMIER-MEDIA ©2007-2019 All rights reserved.
+        PREMIER-MEDIA ©2007-2020 All rights reserved.
       </div>
       <!-- Раздел Footer: конец блока-->
 
