--- a/movies/batiks_room.html
+++ b/movies/batiks_room.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="../css/movie.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="../assets/logo.png" type="image/x-icon">
-    <title>DADDY’S ROOM / КІМНАТА БАТІКА</title>
+    <title>BATIK'S ROOM / КІМНАТА БАТІКА</title>
   </head>
 
   <body>
@@ -48,7 +48,7 @@
         <div class="poster-side">
           <div class="film-card">
             <div class="poster-wrapper">
-              <img src='../assets/projects/kimnata_batika.jpg'>
+              <img src='../assets/produced/batiks_room.jpg'>
             </div>
           </div>
           <div class="details">
@@ -70,8 +70,8 @@
         </div>
         <div class="description-side">
           <div class="description">
-            <h2>DADDY’S ROOM / КІМНАТА БАТІКА</h2>
-            <h3>2020 / short / drama / 17 min / Ukraine</h3>
+            <h2>BATIK'S ROOM / КІМНАТА БАТІКА</h2>
+            <h3>2020 / short / drama / 25 min / Ukraine</h3>
             <p>Дія фільму «Кімната Батіка» відбувається в наш час на Сході країни.
 Тема фільму - дорослішання на тлі війни. Спроба дослідити те, як змінюється
 психіка підлітка під її впливом. - Війна руйнує не тільки дороги та будинки, але
@@ -104,12 +104,12 @@
       <div class="mobile-movie-wrapper">
 
           <div class="movie-title-and-subtitle">
-            <h2>DADDY’S ROOM / КІМНАТА БАТІКА</h2>
-            <h3>2020 / short / drama / 17 min / Ukraine</h3>
+            <h2>BATIK'S ROOM / КІМНАТА БАТІКА</h2>
+            <h3>2020 / short / drama / 25 min / Ukraine</h3>
           </div>
 
           <div class="poster-wrapper">
-            <img src='../assets/projects/kimnata_batika.jpg'>
+            <img src='../assets/produced/batiks_room.jpg'>
           </div>
 
           <div class="movie-description">
