added Maya Deren

--- a/index.html
+++ b/index.html
@@ -77,6 +77,16 @@
 
         <div class="film-card">
           <div class="poster-wrapper">
+            <a href="movies/maya_deren.html"><img src='assets/projects/maya_deren.png'></a>
+          </div>
+          <div class="description">
+            <h2>«Майя Дерен. Танок у Києві» / Maya Deren. Dance through Kyiv</h2>
+            <p>2021, biography, historical reconstruction, doku-fiction, Ukraine</p>
+          </div>
+        </div>
+
+        <div class="film-card">
+          <div class="poster-wrapper">
             <a href="movies/vira.html"><img src='assets/projects/vira.png'></a>
           </div>
           <div class="description">
@@ -115,7 +125,7 @@
               <strong>Script:</strong>
                 Oleksandr Shapiro
             </p>
-            <p>2020, feature , drama, Ukraine</p>
+            <p>2020, feature, drama, Ukraine</p>
           </div>
         </div>
 
