Added chormet and sea ocean

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
         <div class="film-card">
           <div class="poster-wrapper">
-            <img src='assets/projects/more_ocean.jpg'>
+            <a href="movies/sea_ocean.html"><img src='assets/projects/more_ocean.jpg'></a>
           </div>
           <div class="description">
             <h2>SEA-OCEAN / МОРЕ-ОКЕАН</h2>
@@ -126,6 +126,25 @@
                 Oleksandr Shapiro
             </p>
             <p>2020, feature, drama, Ukraine</p>
+          </div>
+        </div>
+
+        <div class="film-card">
+          <div class="poster-wrapper">
+            <a href="movies/chormet.html"><img src='assets/projects/chormet.jpg'></a>
+          </div>
+          <div class="description">
+            <h2>Чормет / Chormet</h2>
+            <p>
+              <strong>Director:</strong>
+              Оксана Войтенко
+            </p>
+            <p>
+              <strong>Script:</strong>
+                Оксана Войтенко
+            </p>
+            <p><strong>Producer: </strong>Руслан Товкун / Ruslan Tovkun</p>
+            <p>2022, drama, Ukraine</p>
           </div>
         </div>
 
