updated vira, updated some small things

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="assets/logo.png" type="image/x-icon">
-    <title>PREMIER-MEDIA - кінокомпанія з виробницта та дистрибуції фільмів. Продюсує художні, документальні та короткометражні кінофільми. The film production and distribution company. Produces feature movies, documentaries and short films.</title>
-    <meta name="description" content="PREMIER-MEDIA - кінокомпанія з виробницта та дистрибуції фільмів. Продюсує художні, документальні та короткометражні кінофільми. The film production and distribution company. Produces feature movies, documentaries and short films.">
+    <title>PREMIER-MEDIA (Прем’єр - Медіа Філмс) - кінокомпанія з виробницта та дистрибуції фільмів. Продюсує художні, документальні та короткометражні кінофільми. The film production and distribution company. Produces feature movies, documentaries and short films.</title>
+    <meta name="description" content="PREMIER-MEDIA (Прем’єр - Медіа Філмс) - кінокомпанія з виробницта та дистрибуції фільмів. Продюсує художні, документальні та короткометражні кінофільми. The film production and distribution company. Produces feature movies, documentaries and short films.">
     <meta name="keywords" content="прем'єр-медіа, українське кіно, продюсер, фільм, продакшн, film, movie, premier-media, produce, distribution, ukrainian production, indie, arthouse">
 
     <!-- OpenGraph tags -->
-    <meta property="og:title" content="PREMIER-MEDIA - The film production and distribution company. Produces feature movies, documentaries and short films.">
-    <meta property="og:site_name" content="PREMIER-MEDIA">
+    <meta property="og:title" content="PREMIER-MEDIA (Прем’єр - Медіа Філмс) - The film production and distribution company. Produces feature movies, documentaries and short films.">
+    <meta property="og:site_name" content="PREMIER-MEDIA / Прем’єр - Медіа Філмс">
     <meta property="og:url" content="https://premiermediafilms.com/">
     <meta property="og:description" content="The film production and distribution company. Produces feature movies, documentaries and short films.">
     <meta property="og:type" content="website">
@@ -87,32 +87,6 @@
 
         <div class="film-card">
           <div class="poster-wrapper">
-            <a href="movies/vira.html"><img src='assets/projects/vira.png'></a>
-          </div>
-          <div class="description">
-            <h2>VIRA / ВIPA</h2>
-            <p>
-              <strong>Director:</strong>
-              Аnna Buryachkova
-            </p>
-            <!-- <p>
-              <strong>Producer:</strong>
-              Ruslan Tovkun
-            </p> -->
-            <p>
-              <strong>Script:</strong>
-              Oksana Savchenko
-            </p>
-            <p>
-              <strong>Production:</strong>
-              Premier Media
-            </p>
-            <p>2020, short, documentary, Ukraine</p>
-          </div>
-        </div>
-
-        <div class="film-card">
-          <div class="poster-wrapper">
             <a href="movies/sea_ocean.html"><img src='assets/projects/more_ocean.jpg'></a>
           </div>
           <div class="description">
@@ -164,6 +138,24 @@
               Ruslan Aritovych
             </p>
             <p>2020, short, drama, Ukraine</p>
+          </div>
+        </div>
+
+        <div class="film-card">
+          <div class="poster-wrapper">
+            <a href="movies/vira.html"><img src='assets/projects/vira.png'></a>
+          </div>
+          <div class="description">
+            <h2>VIRA / ВIPA</h2>
+            <p>
+              <strong>Script:</strong>
+              Руслан Арітович / Ruslan Aritovych
+            </p>
+            <p>
+              <strong>Production:</strong>
+              Premier Media
+            </p>
+            <p>2022, short, documentary, Ukraine</p>
           </div>
         </div>
       </div>
@@ -247,7 +239,7 @@
             </p>
             <p>
               <strong>Script:</strong>
-              Lyubko Deresh
+              Lyubko Deresh, Ruslan Aritovych
             </p>
             <!-- <p>
               <strong>Co-Production:</strong>
