--- a/movies/vira.html
+++ b/movies/vira.html
@@ -52,23 +52,22 @@
             </div>
           </div>
           <div class="details">
-            <p><strong>Director: </strong>Anna Buryachkova / Анна Бурячкова</p>
             <!-- <p><strong>Director of photography: </strong>Томас Стоковскі / Thomas Stokowski</p> -->
             <!-- <p><strong>Music: </strong> Full Name</p> -->
             <!-- <p><strong>Lead Actors: </strong>Full Name, Full Name, Full Name, Full Name, Full Name, Full Name</p> -->
             <!-- <p><strong>Production Design: </strong>Full Name</p> -->
             <p><strong>Producer: </strong>Ruslan Tovkun / Руслан Товкун</p>
-            <p><strong>Script: </strong>Оксана Савченко / Oksana Savchenko</p>
+            <p><strong>Script: </strong>Руслан Арітович / Ruslan Aritovych</p>
             <!-- <p><strong>Supported By: </strong>Company Name, Company Name</p> -->
             <!-- <p><strong>World Sales: </strong>100 000 000$</p> -->
             <!-- <p><strong>Awards: </strong> Award Name, Award Name</p> -->
-            <p><strong>Release Date: </strong>2020</p>
+            <p><strong>Release Date: </strong>2022</p>
           </div>
         </div>
         <div class="description-side">
           <div class="description">
             <h2>VIRA / ВIPA</h2>
-            <h3>2020, short, documentary, Ukraine</h3>
+            <h3>2022, short, documentary, Ukraine</h3>
             <p>Tема: <br> Підліткове дорослішання на тлі війни.</p>
             <p>Cюжет: <br>Тринадцятирічна Віра, мешканка невиличкого містечка на сході України, не зважаючи на те, що бойові дії навколо не припинялись, кожного дня ходила до школи. Навіть тоді, коли міст на інший бік, де була розташовано школа було зруйновано.</p>
             <p>Iсторична нота: <br> 3-го вересня 2014 року терористи повністю зруйнували міст через річку Сіверський Донець. У селищі Трьохізбенка. Велика частина мешканців залишилась без можливості дістатися до школи та лікарні. Але були діти, які продовжували ходити до школи, перепливаючи річку на човнах. Серед них була і наша героїня.</p>
@@ -90,7 +89,7 @@
 
           <div class="movie-title-and-subtitle">
             <h2>VIRA / ВIPA</h2>
-            <h3>2020, short, documentary, Ukraine</h3>
+            <h3>2022, short, documentary, Ukraine</h3>
           </div>
 
           <div class="poster-wrapper">
@@ -105,17 +104,16 @@
           </div>
 
           <div class="details">
-            <p><strong>Director: </strong>Anna Buryachkova / Анна Бурячкова</p>
             <!-- <p><strong>Director of photography: </strong>Томас Стоковскі / Thomas Stokowski</p> -->
             <!-- <p><strong>Music: </strong> Full Name</p> -->
             <!-- <p><strong>Lead Actors: </strong>Full Name, Full Name, Full Name, Full Name, Full Name, Full Name</p> -->
             <!-- <p><strong>Production Design: </strong>Full Name</p> -->
             <p><strong>Producer: </strong>Ruslan Tovkun / Руслан Товкун</p>
-            <p><strong>Script: </strong>Оксана Савченко / Oksana Savchenko</p>
+            <p><strong>Script: </strong>Руслан Арітович / Ruslan Aritovycho</p>
             <!-- <p><strong>Supported By: </strong>Company Name, Company Name</p> -->
             <!-- <p><strong>World Sales: </strong>100 000 000$</p> -->
             <!-- <p><strong>Awards: </strong> Award Name, Award Name</p> -->
-            <p><strong>Release Date: </strong>2020</p>
+            <p><strong>Release Date: </strong>2022</p>
           </div>
           <!-- <style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src=' YOUTUBE URL HERE ' frameborder='0' allowfullscreen></iframe></div> -->
           <!-- <style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src=' VIMEO URL HERE ' frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe></div> -->
