added release date to sea ocean

--- a/movies/sea_ocean.html
+++ b/movies/sea_ocean.html
@@ -56,6 +56,7 @@
             <p><strong>Script: </strong>Олександр Шапіро / Oleksandr Shapiro</p>
             <p><strong>Producer: </strong>Руслан Товкун / Ruslan Tovkun</p>
             <p><strong>Starring: </strong>Олексій Горбунов, Алла Сергійко</p>
+            <p><strong>Release Date: </strong>2021</p>
           </div>
         </div>
         <div class="description-side">
@@ -125,6 +126,7 @@
             <p><strong>Script: </strong>OОлександр Шапіро / Oleksandr Shapiro</p>
             <p><strong>Producer: </strong>Руслан Товкун / Ruslan Tovkun</p>
             <p><strong>Starring: </strong>Олексій Горбунов, Алла Сергійко</p>
+            <p><strong>Release Date: </strong>2021</p>
           </div>
 
       </div>
