added some info

--- a/index.html
+++ b/index.html
@@ -81,6 +81,9 @@
           </div>
           <div class="description">
             <h2>«Майя Дерен. Танок у Києві» / Maya Deren. Dance through Kyiv</h2>
+            <p><strong>Director: </strong>Олена Алимова / Alyona Alymova, Руслан Арітович / Ruslan Aritovych</p>
+            <p><strong>Script: </strong>Руслан Арітович / Ruslan Aritovych</p>
+            <p><strong>Producer: </strong>Ruslan Tovkun / Руслан Товкун</p>
             <p>2021, biography, historical reconstruction, doku-fiction, Ukraine</p>
           </div>
         </div>
@@ -99,6 +102,7 @@
               <strong>Script:</strong>
                 Oleksandr Shapiro
             </p>
+            <p><strong>Starring: </strong>Олексій Горбунов, Алла Сергійко</p>
             <p>2020, feature, drama, Ukraine</p>
           </div>
         </div>
