--- a/movies/chormet.html
+++ b/movies/chormet.html
@@ -61,6 +61,7 @@
                 Оксана Войтенко
             </p>
             <p><strong>Producer: </strong>Руслан Товкун / Ruslan Tovkun</p>
+            <p><strong>Release Date: </strong>2022</p>
           </div>
         </div>
         <div class="description-side">
@@ -103,6 +104,7 @@
                 Оксана Войтенко
             </p>
             <p><strong>Producer: </strong>Руслан Товкун / Ruslan Tovkun</p>
+            <p><strong>Release Date: </strong>2022</p>
           </div>
 
       </div>
