--- a/index.html
+++ b/index.html
@@ -80,11 +80,10 @@
             <a href="movies/maya_deren.html"><img src='assets/projects/maya_deren.png'></a>
           </div>
           <div class="description">
-            <h2>«Майя Дерен. Танок у Києві» / Maya Deren. Dance through Kyiv</h2>
-            <p><strong>Director: </strong>Олена Алимова / Alyona Alymova, Руслан Арітович / Ruslan Aritovych</p>
-            <p><strong>Script: </strong>Руслан Арітович / Ruslan Aritovych</p>
-            <p><strong>Producer: </strong>Ruslan Tovkun / Руслан Товкун</p>
-            <p>2021, biography, historical reconstruction, doku-fiction, Ukraine</p>
+            <h2>«МАЙЯ ДЕРЕН. ТАНОК У КИЄВІ» / MAYA DEREN. DANCE THROUGH KYIV</h2>
+            <p><strong>Director: </strong>Alyona Alymova, Ruslan Aritovych</p>
+            <p><strong>Script: </strong>Ruslan Aritovych</p>
+            <p>2021, biography, historical reconstruction, docu-fiction, Ukraine</p>
           </div>
         </div>
 
@@ -103,7 +102,7 @@
                 Oleksandr Shapiro
             </p>
             <p><strong>Starring: </strong>Олексій Горбунов, Алла Сергійко</p>
-            <p>2020, feature, drama, Ukraine</p>
+            <p>2021, feature, drama, Ukraine</p>
           </div>
         </div>
 
@@ -112,16 +111,15 @@
             <a href="movies/chormet.html"><img src='assets/projects/chormet.jpg'></a>
           </div>
           <div class="description">
-            <h2>Чормет / Chormet</h2>
+            <h2>ЧОРМЕТ / CHORMET</h2>
             <p>
               <strong>Director:</strong>
               Оксана Войтенко
             </p>
             <p>
               <strong>Script:</strong>
-                Оксана Войтенко
+                Оксана Савченко
             </p>
-            <p><strong>Producer: </strong>Руслан Товкун / Ruslan Tovkun</p>
             <p>2022, drama, Ukraine</p>
           </div>
         </div>
