--- a/movies/maya_deren.html
+++ b/movies/maya_deren.html
@@ -61,7 +61,7 @@
         <div class="description-side">
           <div class="description">
             <h2>«Майя Дерен. Танок у Києві» / Maya Deren. Dance through Kyiv</h2>
-    <h3>2021 / biography / historical reconstruction / doku-fiction / 70 min / Ukraine</h3>
+    <h3>2021 / biography / historical reconstruction / docu-fiction / 70 min / Ukraine</h3>
     <p>Майя Дерен (Елеонора Деренковська) - киянка, з якої почався американський кіноавангард.</p>
     <p>Перша жінка в історії кінематографу, яка отримала Канську пальмову гілку. Їй дісталося насичене, але коротке життя, наповнене пошуком себе в творчості.
       Майя Дерен мала мрію – повернутися у Київ - місто, де пройшло її дитинство.</p>
@@ -107,7 +107,7 @@
       </div>
 
       <div id="footer">
-        PREMIER-MEDIA ©2007-2019 All rights reserved.
+        PREMIER-MEDIA ©2007-2020 All rights reserved.
       </div>
 
       <script type="text/javascript">
