--- a/movies/sea_ocean.html
+++ b/movies/sea_ocean.html
@@ -81,8 +81,7 @@
             ватерполо, мʼячем у цій ситуації слугує життя або життєвість - так точніше, - вона
             то підлітає, то осідає в сітці воріт смерті.</p>
             <p>Врешті-решт, відбувається сейсмічне напруження, хвиля досягає межі, щось
-            зримо змінюється - герой гине, оскільки він і є хвиля, ну а плавці - мати і син,
-            розділені нею, зʼєднуються і ховаються в морських глибинах…</p>
+            зримо змінюється...</p>
 
           </div>
         </div>
@@ -117,13 +116,12 @@
             ватерполо, мʼячем у цій ситуації слугує життя або життєвість - так точніше, - вона
             то підлітає, то осідає в сітці воріт смерті.</p>
             <p>Врешті-решт, відбувається сейсмічне напруження, хвиля досягає межі, щось
-            зримо змінюється - герой гине, оскільки він і є хвиля, ну а плавці - мати і син,
-            розділені нею, зʼєднуються і ховаються в морських глибинах…</p>
+            зримо змінюється...</p>
           </div>
 
           <div class="details">
             <p><strong>Director: </strong>Олександр Шапіро / Oleksandr Shapiroo</p>
-            <p><strong>Script: </strong>OОлександр Шапіро / Oleksandr Shapiro</p>
+            <p><strong>Script: </strong>Олександр Шапіро / Oleksandr Shapiro</p>
             <p><strong>Producer: </strong>Руслан Товкун / Ruslan Tovkun</p>
             <p><strong>Starring: </strong>Олексій Горбунов, Алла Сергійко</p>
             <p><strong>Release Date: </strong>2021</p>
@@ -132,7 +130,7 @@
       </div>
 
       <div id="footer">
-        PREMIER-MEDIA ©2007-2019 All rights reserved.
+        PREMIER-MEDIA ©2007-2020 All rights reserved.
       </div>
 
       <script type="text/javascript">
