--- a/movies/chormet.html
+++ b/movies/chormet.html
@@ -58,7 +58,7 @@
             </p>
             <p>
               <strong>Script:</strong>
-                Оксана Войтенко
+                Оксана Савченко
             </p>
             <p><strong>Producer: </strong>Руслан Товкун / Ruslan Tovkun</p>
             <p><strong>Release Date: </strong>2022</p>
@@ -110,7 +110,7 @@
       </div>
 
       <div id="footer">
-        PREMIER-MEDIA ©2007-2019 All rights reserved.
+        PREMIER-MEDIA ©2007-2020 All rights reserved.
       </div>
 
       <script type="text/javascript">
